# ctcc-nrf-reference-software

./: CMakeLists.txt  Kconfig  README.md  west.yml
.ci_scripts/: build_sdk.sh
.github/workflows/: build-firmwares.yml
boards/ct/ctcc/: CMakeLists.txt  Kconfig.defconfig  app_protect.c  board.cmake  board.yml  ctcc_nrf52840.dts  ctcc_nrf52840_defconfig  ctcc_nrf9151-pinctrl.dtsi  ctcc_nrf9151.dts  ctcc_nrf9151.yaml  ctcc_nrf9151_common.dtsi  ctcc_nrf9151_defconfig  ctcc_nrf9151_ns.dts  ctcc_nrf9151_ns.yaml  ctcc_nrf9151_ns_defconfig  ctcc_nrf9151_partition_conf.dtsi  ctcc_nrf9161.yaml  ctcc_nrf9161_common.dtsi  ctcc_nrf9161_partition_conf.dtsi
boards/ct/ctcc/dts/bindings/: ct,ctcc-wdisable.yaml
boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/: mcuboot.conf
boards/ct/ctcc/nrf-sdk/nrf52840/sysbuild/mcuboot/: prj.conf
boards/ct/ctcc/nrf-sdk/nrf9151/sysbuild/mcuboot/: prj.conf
boards/ct/ctcc/nrf-sdk/nrf9161/: pm_static.yml
firmware/: CMakeLists.txt
firmware/src/: main.c
patches/nrf-sdk/: 0001-applications-rework-configs-for-serial_lte_modem-for.patch
patches/zephyr/: 0001-kernel-banner-add-custom-CTHINGS.CO-banner.patch  0002-samples-bluetooth-hci_usb-add-ctcc-nrf52840-overlay.patch
tests/assembly/: CMakeLists.txt  prj.conf
tests/assembly/boards/: ctcc_nrf9151_ns.conf  ctcc_nrf9151_ns.overlay
tests/assembly/src/: main.c  spi_nor_tests.c
zephyr/: module.yml
